# reasoning-engine

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MCP_AUDIT_2026-06-21.md  README.md  SECURITY.md  pyproject.toml  run-notion-mcp-laptop.command  run-notion-mcp-laptop.sh
.github/workflows/: ci.yml
docs/: api-reference.md  architecture.md  examples.md  notion-laptop-mcp.md
docs/superpowers/plans/: 2026-06-21-local-http-mcp.md  2026-06-21-verifiable-research-engine-mvp.md
docs/superpowers/specs/: 2026-06-21-local-http-mcp-design.md  2026-06-21-research-engine-10-design.md
skill/: deep-research.md
src/reasoning_engine/: __init__.py  cli.py  db.py  difficulty.py  dora.py  memory.py  research.py  sanitizer.py  server.py  sessions.py  transport.py  ucb.py  validation.py
src/reasoning_engine/verifiable/: __init__.py  claims.py  models.py  profiles.py  quality.py  retrieval.py  runpack.py  service.py  store.py
tests/: conftest.py  test_cli.py  test_db.py  test_difficulty.py  test_dora.py  test_e2e.py  test_http_transport.py  test_memory.py  test_notion_launcher.py  test_research.py  test_sanitizer.py  test_server.py  test_sessions.py  test_ucb.py  test_verifiable_claims_quality.py  test_verifiable_invariants.py  test_verifiable_models.py  test_verifiable_profiles.py  test_verifiable_retrieval.py  test_verifiable_runpack.py  test_verifiable_service.py  test_verifiable_store.py
