[project]
name = "reasoning-engine"
version = "0.1.0"
description = "MCP server implementing Actor-Critic-Planner-Reflexion reasoning backend"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
