[project]
name = "reasoning-engine"
version = "0.1.0"
description = "MCP server implementing Actor-Critic-Planner-Reflexion reasoning for deep research"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Raouf" }]
keywords = ["mcp", "reasoning", "research", "claude", "prm", "reflexion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.24.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.14",
]

[project.urls]
Repository = "https://github.com/Raoof128/reasoning-engine"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
